fix : collect->tolist로 수정